--- a/index.html
+++ b/index.html
@@ -4,52 +4,204 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Kurjan Varshavali</title>
     <style>
+:root {
+  --bg: #0f172a;               /* Darker background */
+  --panel: #1e293b;            /* 🔄 Navbar background - dark slate blue */
+  --text: #f1f5f9;             /* Light text color */
+  --primary: #6366f1;          /* Indigo primary (works well on dark) */
+  --border: #334155;           /* Slightly lighter border for contrast */
+  --card-bg: #1e293b;          /* Matches navbar for panel */
+  --grid-line: rgba(255, 255, 255, 0.03); /* Softer grid lines */
+  --radius: 8px;
+}
+
+      body {
+        margin: 0;
+        font-family: 'Poppins', sans-serif;
+        background-color: var(--bg);
+        color: var(--text);
+      }
+
+      .navbar {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+        gap: 10px;
+        padding: 10px 20px;
+        background-color: var(--panel);
+        border-bottom: 1px solid var(--border);
+        position: sticky;
+        top: 0;
+        z-index: 100;
+      }
+
+      .navbar h1 {
+        margin: 0 auto;
+        font-size: 22px;
+        font-weight: 600;
+        flex: 1 1 100%;
+        text-align: center;
+        color: var(--primary);
+      }
+
+      .navbar-left,
+      .navbar-right {
+        display: flex;
+        gap: 8px;
+        flex-wrap: wrap;
+      }
+
+      .navbar input[type="text"] {
+        padding: 6px 12px;
+        font-size: 14px;
+        border-radius: var(--radius);
+        border: 1px solid var(--border);
+        background: #fff;
+        color: var(--text);
+      }
+
+      .navbar button {
+        padding: 6px 12px;
+        font-size: 14px;
+        border-radius: var(--radius);
+        background-color: var(--primary);
+        color: #fff;
+        border: none;
+        cursor: pointer;
+        transition: background 0.2s;
+      }
+
+      .navbar button:hover {
+        background-color: #3730a3;
+      }
+
+      #myDiagramDiv {
+  height: 90vh;
+  width: 100vw;
+  background-image: 
+    linear-gradient(to right, var(--grid-line) 1px, transparent 1px),
+    linear-gradient(to bottom, var(--grid-line) 1px, transparent 1px);
+  background-size: 20px 20px;
+  background-color: #1e1e1e; /* NEW: soft dark background for clarity */
+}
+
       .slide-panel {
         position: fixed;
         top: 0;
         right: 0;
         height: 100vh;
-        width: 20vw;
-        min-width: 260px;
+        width: 80vw;
         max-width: 400px;
         padding: 20px;
-        background: #fff;
-        border-left: 1px solid #eee;
-        font-family: Poppins, sans-serif;
-        box-shadow: -2px 0 8px rgba(0,0,0,0.04);
-        transition: transform 0.4s cubic-bezier(.4,0,.2,1), visibility 0s linear 0.4s;
+        background: var(--card-bg);
+        border-left: 1px solid var(--border);
+        box-shadow: -2px 0 8px rgba(0,0,0,0.08);
+        transition: transform 0.4s ease, visibility 0s linear 0.4s;
         transform: translateX(100%);
         z-index: 10;
         visibility: hidden;
       }
+
       .slide-panel.open {
         transform: translateX(0);
         visibility: visible;
-        transition: transform 0.4s cubic-bezier(.4,0,.2,1), visibility 0s;
+        transition: transform 0.4s ease, visibility 0s;
+      }
+
+      #closePersonInfo {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        background: #ddd;
+        border: none;
+        border-radius: 50%;
+        width: 28px;
+        height: 28px;
+        font-size: 18px;
+        cursor: pointer;
+        color: #333;
+      }
+
+      @media (max-width: 600px) {
+        .navbar {
+          flex-direction: column;
+          align-items: stretch;
+        }
+
+        .navbar-left,
+        .navbar-right {
+          justify-content: center;
+          flex: 1 1 100%;
+        }
+
+        .navbar h1 {
+          order: -1;
+          font-size: 18px;
+        }
+
+        .navbar input {
+          width: 100%;
+        }
+
+        #myDiagramDiv {
+          height: 80vh;
+        }
+
+        .slide-panel {
+          width: 100vw;
+        }
+        .made-by {
+  font-size: 12px;
+  color: var(--text);
+  margin-left: auto;
+  margin-right: 0;
+  opacity: 0.7;
+  align-self: center;
+}
+
+@media (max-width: 600px) {
+  .made-by {
+    text-align: center;
+    width: 100%;
+    margin-top: 4px;
+    margin-left: 0;
+  }
+}
+
       }
     </style>
   </head>
   <body>
-    <h1 style="text-align:center; font-family:Poppins, sans-serif; margin-top:20px; margin-bottom:10px;">
-      kurjan varshavali
-    </h1>
-    <div style="display:flex;">
-      <div id="myDiagramDiv" style="width:100vw; height:90vh; background:#f8f8f8;"></div>
+    <div class="navbar">
+      <h1>Kurjan Varshavali</h1>
+      <div class="navbar-left">
+        <button id="zoomToFit">Zoom to Fit</button>
+        <button id="centerRoot">Center Root</button>
+        <span class="made-by">Made with ❤️ by Abhinav</span>
+
+      </div>
+      <div class="navbar-right">
+        <input id="searchBox" type="text" placeholder="Search name..." />
+        <button id="searchBtn">Search</button>
+        
+      </div>
+    </div>
+
+    <div style="display: flex;">
+      <div id="myDiagramDiv"></div>
       <div id="personInfo" class="slide-panel">
-        <button id="closePersonInfo" style="position:absolute; top:10px; right:10px; background:#eee; border:none; border-radius:50%; width:28px; height:28px; font-size:18px; cursor:pointer;">&times;</button>
+        <button id="closePersonInfo">&times;</button>
         <h2>Person Info</h2>
         <div id="personDetails">Click a node to see details.</div>
       </div>
     </div>
-    <div style="display: flex; justify-content: flex-end; align-items: center; margin: 10px 30px 0 0;">
-      <input id="searchBox" type="text" placeholder="Search name..." style="padding:6px 12px; font-size:16px; border-radius:4px; border:1px solid #ccc;">
-      <button id="searchBtn" style="margin-left:8px; padding:6px 16px; font-size:16px; border-radius:4px; border:1px solid #485670; background:#485670; color:#fff; cursor:pointer;">Search</button>
-    </div>
-    <button id="zoomToFit">Zoom to Fit</button>
-    <button id="centerRoot">Center Root</button>
-    <div id="app"></div>
+
     <script type="module" src="/src/main.js"></script>
+    <footer class="footer">
+    Made with ❤️ by Abhinav
+  </footer>
   </body>
 </html>
