--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
         flex-wrap: wrap;
       }
 
-      .navbar input[type="text"] {
-        padding: 6px 12px;
-        font-size: 14px;
-        border-radius: var(--radius);
-        border: 1px solid var(--border);
-        background: #fff;
-        color: var(--text);
-      }
+navbar input[type="text"] {
+  padding: 6px 12px;
+  font-size: 14px;
+  border-radius: var(--radius);
+  border: 1px solid var(--border);
+  background-color: #fff; /* Light background */
+  color: #1e293b;          /* Dark text color */
+}
 
       .navbar button {
         padding: 6px 12px;
@@ -90,6 +90,7 @@
 
       .slide-panel {
         position: fixed;
+        overflow-y: auto;
         top: 0;
         right: 0;
         height: 100vh;
@@ -111,19 +112,31 @@
         transition: transform 0.4s ease, visibility 0s;
       }
 
-      #closePersonInfo {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        background: #ddd;
-        border: none;
-        border-radius: 50%;
-        width: 28px;
-        height: 28px;
-        font-size: 18px;
-        cursor: pointer;
-        color: #333;
-      }
+#closePersonInfo {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: #f0f0f0; /* lighter gray background */
+  color: #111827;      /* dark icon color */
+  border: none;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.15);
+  z-index: 1000;
+}
+      @media (max-width: 600px) {
+  .slide-panel {
+    width: 90vw;
+    left: 5vw;
+    right: auto;
+    border-left: none;
+    border-radius: var(--radius);
+  }
+}
 
       @media (max-width: 600px) {
         .navbar {
@@ -200,8 +213,6 @@
     </div>
 
     <script type="module" src="/src/main.js"></script>
-    <footer class="footer">
-    Made with ❤️ by Abhinav
-  </footer>
+
   </body>
 </html>
