--- a/index.html
+++ b/index.html
@@ -91,16 +91,15 @@
 
 .slide-panel {
   position: fixed;
-  overflow-y: auto;
   top: 0;
   right: 0;
   height: 100vh;
-  width: 80vw;                       /* default width (desktop) */
+  width: 80vw;
   max-width: 400px;
-  padding: 20px;
+  padding: 70px 20px 20px 20px; /* Top padding increased */
   background: var(--card-bg);
   border-left: 1px solid var(--border);
-  box-shadow: -2px 0 8px rgba(0, 0, 0, 0.08);
+  box-shadow: -2px 0 8px rgba(0,0,0,0.08);
   transition: transform 0.4s ease, visibility 0s linear 0.4s;
   transform: translateX(100%);
   z-index: 10;
@@ -116,10 +115,16 @@
 /* ✅ MOBILE OVERRIDE */
 @media (max-width: 600px) {
   .slide-panel {
-    width: 20vw;
-    max-width: 260px;
-    border-left: none;
+    width: 40vw;
+    max-width: 40vw;
+    height: 100vh;
+    top: 0;
+    left: auto;
+    right: 0;
+    padding: 120px 20px 20px;
+    border-left: 1px solid var(--border);
     border-radius: var(--radius);
+    overflow-y: auto;
   }
 }
 
