--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
   </head>
   <body>
     <div class="navbar">
-      <h1>Kurjan Varshavali</h1>
+      <h1>Kurjhan Varshavali</h1>
       <div class="navbar-left">
         <button id="zoomToFit">Zoom to Fit</button>
         <button id="centerRoot">Center Root</button>
